--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,39 @@
 {
 	"HOME": {
+		"CARGO": {
+			"CD": {
+				"GENERALSEC": "Secretario General",
+				"PRESIDENT": "Presidente",
+				"TREASURER": "Tesorero",
+				"VP": "Vicepresidente"
+			},
+			"EDUCATION": {
+				"ASSISTANT": "Ayudante de tutorías",
+				"HEADTUTOR": "Tutor Encargado",
+				"RRPP": "RRPP & Logística",
+				"TITLE": "Educación",
+				"TUTOR": "Tutor"
+			},
+			"FUNDRAISING": {
+				"LOGISTICS": "Fundraiser & Logística",
+				"RRPP": "RRHH & RRPP"
+			},
+			"ID": {
+				"ASSISTANT": "Asistente de I+D",
+				"CHIEF": "Jefe de I+D"
+			},
+			"MEDIACOM": {
+				"CC": "Creador de Contenido",
+				"DESIGNER": "Diseñador",
+				"WEBMASTER": "Webmaster & Editor"
+			},
+			"VOLUNTEERS": {
+				"FUNDRAISINGMENTOR": "Mentor de Fundraising",
+				"GENERALASSIST": "Asistente General",
+				"TEAMMENTOR": "Mentor de Equipos Competitivos",
+				"VOLUNTEER": "Voluntario"
+			}
+		},
 		"CLASSES": {
 			"TEXT": "La programación es una habilidad que no discrimina profesiones y su dominio puede enriquecer a cualquier persona. Nuestros cursos de Python, ya sean introductorios o no, están orientado a estudiantes, profesionales e interesados de distintas especialidades y a todo aquel que lo necesite o le encuentre valor.",
 			"TITLE": "Cursos de Python"
