--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -131,5 +131,9 @@
 			"TITLE": "Consultas"
 		},
 		"TITLE": "Cursos Principiante de Python 2020"
+	},
+	"IEEEMEETUP":{
+		"TITLE": "IEEE - 2do Meet Up",
+		"CONTENT": "En esta juntada el equipo IEEE discutirá en función de lo logrado (y no logrado!) hasta el momento, la situación actual y las ideas propuestas, como continuar en lo que sigue del año. ¡Es el momento ideal para dar punto de partida a nuevas actividades! ¡Publica los temas que quieras que se discutan en el form!"
 	}
 }
