--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -36,24 +36,24 @@
 				"VOLUNTEER": "Voluntario"
 			},
 			"WIE": {
-				"PRESIDENT":"Presidente",
-				"VP":"Vicepresidente",
-				"TREASURER":"Tesorera",
-				"COMM":"Comunicación",
-				"PLANNING":"Planificación",
-				"FEMVOLUNTEER":"Voluntaria",
-				"VOLUNTEER":"Voluntario",
+				"PRESIDENT": "Presidente",
+				"VP": "Vicepresidente",
+				"TREASURER": "Tesorera",
+				"COMM": "Comunicación",
+				"PLANNING": "Planificación",
+				"FEMVOLUNTEER": "Voluntaria",
+				"VOLUNTEER": "Voluntario",
 				"SOCIAL": "Redes Sociales",
-				"WEBMASTER":"Webmaster & Editor de WIE"
+				"WEBMASTER": "Webmaster & Editor de WIE"
 			},
 			"CS": {
-				"PRESIDENT":"Presidente",
-				"VP":"Vicepresidente",
-				"GENERALSEC":"Secretario General",
-				"TREASURER":"Tesorero",
-				"RRPP":"Relaciones públicas",
-				"LOGISTIC":"Logística",
-				"COMPETITIVEPROGRAMMING":"Programación Competitiva"
+				"PRESIDENT": "Presidente",
+				"VP": "Vicepresidente",
+				"GENERALSEC": "Secretario General",
+				"TREASURER": "Tesorero",
+				"RRPP": "Relaciones públicas",
+				"LOGISTIC": "Logística",
+				"COMPETITIVEPROGRAMMING": "Programación Competitiva"
 			}
 		},
 		"CLASSES": {
@@ -87,11 +87,10 @@
 		"IEEEXTREME": {
 			"TEXT": "IEEExtreme es una competencia internacional con la particularidad de durar 24hs y darse simultáneamente en todo el mundo. IEEE-ITBA es la sede del torneo más importante del país.",
 			"TITLE": "Competición IEEExtreme",
-			"NOW":
-				{
-						"TEXT": "¿Te gusta programar? ¿Resolver desafíos? ¡Anótate en la Ieeextreme 14.0 que se llevará a cabo los días 23 y 24 de octubre! ¡Ganáte un Itbot!",
-						"TITLE": "¡Anótate a la Ieeextreme 14.0!"
-				}
+			"NOW": {
+				"TEXT": "¿Te gusta programar? ¿Resolver desafíos? ¡Anótate en la Ieeextreme 14.0 que se llevará a cabo los días 23 y 24 de octubre! ¡Ganáte un Itbot!",
+				"TITLE": "¡Anótate a la Ieeextreme 14.0!"
+			}
 		},
 		"PROGCLUB": {
 			"TEXT": "Estamos trabajando en la creación de un equipo que integre personas con intereses en incrementar su pasión por la programación y mejorar sus habilidades tanto de escribir código como de trabajar en equipo. La programación es una habilidad que siempre guarda lugar a la mejora y la experiencia de competir programando marca un antes y un después.",
@@ -142,30 +141,33 @@
 	},
 	"PYTHONCOURSES": {
 		"CLASSES": {
-			"C1": "Introducción a la programación en Python: variables, operadores, control de flujo, funciones.",
-			"C2": "Tipos de datos (int, float, string, boolean), estructuras de datos (lista, diccionario, set, tuplas), operaciones con tipos de datos, operaciones con estructuras de datos.",
-			"C3": "Repaso de flujo, repaso de estructuras de datos, lectura y escritura de archivos, operaciones sobre datos de archivos, introducción a librerías.",
-			"C4": "Introducción a matplotlib, visualización de datos, personalización de los gráficos, ventajas y desventajas uso de Python y Excel.",
-			"INTEGRADOR-TITLE": "Trabajo práctico integrador",
-			"INTEGRADOR": "El objetivo del trabajo final es evaluar los objetivos de aprendizaje de todo el curso mediante un ejemplo práctico",
-			"TITLE": "Clase "
+			"C1": "Introducción a la programación en Python: variables, operadores, control de flujo (if, while, for), funciones.",
+			"C2": "Tipos de datos (int, float, string, boolean), estructuras de datos (List, Dictionary, Set, Tuple), operaciones con tipos de datos, Operaciones con estructuras de datos.",
+			"C3": "Introducción a librerias, lectura y escritura de archivos formato Excel y CSV, manipulación de datos con Pandas, manipulación de archivos de información no estructurada.",
+			"C4": "Introducción a matplotlib, visualización de datos, personalización de los gráficos, casos de aplicación.",
+			"INTEGRADOR-TITLE": "Proyecto Final",
+			"INTEGRADOR": "El objetivo de este proyecto final es crear una aplicación práctica, que sea completa y funcional, integrando contenidos aprendidos a lo largo del curso",
+			"TITLE": "Clase ",
+			"DATE1": "2 de Octubre",
+			"DATE2": "9 de Octubre",
+			"DATE3": "16 de Octubre",
+			"DATE4": "23 de Octubre"
 		},
-		
 		"DESC": "Este público es cada vez más grande pero típicamente no tienen tiempo disponible. Con esto en mente, el curso fue diseñado con un formato amigable de cuatro clases de tres horas de forma tal que pueda realizarse como actividad complementaria al estudio curricular o al trabajo, con un fuerte énfasis en ejemplos prácticos que se relacionen fácilmente con casos de aplicación realistas para la vida profesional. A esto se suma la asistencia personalizada para dar respuesta a la gran heterogeneidad de los participantes, considerando las diferentes carreras, profesiones y edades presentes.",
 		"ENROLLBUTTON": "Anotate",
 		"QUESTIONS": {
 			"TEXT": "Tenemos un SubReddit para contestar dudas: ",
-			"TEXT_VIDEOS":"Tenemos videos en vivo con consultas sobre las clases:",
+			"TEXT_VIDEOS": "Tenemos videos en vivo con consultas sobre las clases:",
 			"TITLE": "Consultas"
 		},
 		"TITLE": "Cursos Principiante de Python 2020"
 	},
-	"IEEEMEETUP":{
+	"IEEEMEETUP": {
 		"TITLE": "IEEE - 2do Meet Up",
 		"CONTENT": "En esta juntada el equipo IEEE discutirá en función de lo logrado (y no logrado!) hasta el momento, la situación actual y las ideas propuestas, como continuar en lo que sigue del año. ¡Es el momento ideal para dar punto de partida a nuevas actividades! ¡Publicá los temas que quieras que se discutan en el form!"
 	},
-	"WIERECRUITING":{
-		"TITLE": "WIE ITBA Recruiting"	,
+	"WIERECRUITING": {
+		"TITLE": "WIE ITBA Recruiting",
 		"CONTENT": "WIE ITBA anuncia una nueva campaña de recruiting ¡Forma parte del equipo! ¡No dudes consultar cualquier duda que tengas!"
 	}
 }
