--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -158,5 +158,9 @@
 	"IEEEMEETUP": {
 		"TITLE": "IEEE - 2nd Meet Up",
 		"CONTENT": "In this IEEE Meeting, the complete IEEE Team will discuss according and what it has and has not accomplished, the actual situation and the proposed ideas how to continue the rest of the year. It this the perfect moment to make the kickoff for new activites! You can share topics you want to be discussed in the form! "
+	},
+	"GENERAL": {
+		"ALL": "ALL",
+		"ACTUAL": "ACTUAL"
 	}
 }
