--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -56,6 +56,10 @@
 				"COMPETITIVEPROGRAMMING": "Programación Competitiva"
 			}
 		},
+		"IEEENEWS": {
+			"TITLE": "IEEE News",
+			"CONTENT": "¡Enterate de las ultimas noticias científicas y tecnológicas!"
+		},
 		"CLASSES": {
 			"TEXT": "La programación es una habilidad que no discrimina profesiones y su dominio puede enriquecer a cualquier persona. Nuestros cursos de Python, ya sean introductorios o no, están orientado a estudiantes, profesionales e interesados de distintas especialidades y a todo aquel que lo necesite o le encuentre valor.",
 			"TITLE": "Cursos de Python"
@@ -166,6 +170,7 @@
 		"TITLE": "IEEE - 2do Meet Up",
 		"CONTENT": "En esta juntada el equipo IEEE discutirá en función de lo logrado (y no logrado!) hasta el momento, la situación actual y las ideas propuestas, como continuar en lo que sigue del año. ¡Es el momento ideal para dar punto de partida a nuevas actividades! ¡Publicá los temas que quieras que se discutan en el form!"
 	},
+
 	"GENERAL": {
 		"ALL": "TODOS",
 		"ACTUAL": "ACTUALES"
