small fix in language

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -58,7 +58,7 @@
 		},
 		"IEEENEWS": {
 			"TITLE": "IEEE News",
-			"CONTENT": "¡Enterate de las ultimas noticias científicas y tecnológicas!"
+			"CONTENT": "¡Enterate de las últimas noticias científicas y tecnológicas!"
 		},
 		"CLASSES": {
 			"TEXT": "La programación es una habilidad que no discrimina profesiones y su dominio puede enriquecer a cualquier persona. Nuestros cursos de Python, ya sean introductorios o no, están orientado a estudiantes, profesionales e interesados de distintas especialidades y a todo aquel que lo necesite o le encuentre valor.",
