added same navbar to all pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,7 +131,8 @@
 		"HOME": "Home",
 		"INITIATIVES": "Initiatives",
 		"TEAM": "Team",
-		"NEWS": "News"
+		"NEWS": "News",
+		"SPONSORS": "Sponsors"
 	},
 	"PYTHONCOURSES": {
 		"CLASSES": {
