--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -141,7 +141,8 @@
 		"HOME": "Home",
 		"INITIATIVES": "Iniciativas",
 		"TEAM": "Equipo",
-		"NEWS": "Noticias"
+		"NEWS": "Noticias",
+		"SPONSORS": "Auspiciantes"
 	},
 	"PYTHONCOURSES": {
 		"CLASSES": {
