feat sponsors finished

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -165,7 +165,7 @@
 		"CONTENT": "¡Accede a la página de noticias de IEEE ITBA!"
 	},
 	"GENERAL": {
-		"ALL": "ALL",
+		"ALL": "PREVIOUS",
 		"ACTUAL": "ACTUAL"
 	},
 	"CONTACT": {
