--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -100,6 +100,10 @@
 			"TITLE": "Women in Engineering"
 		}
 	},
+	"TEAM": {
+		"TITLE": "Team",
+		"SUBTITLE": "IEEE ITBA is based on the hard work of our members in their different fields, get to know them."
+	},
 	"IEEEXTREME": {
 		"FACTS": {
 			"EDITIONS": "Past editions",
