changed login color pallette

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -194,5 +194,13 @@
 		"MESSAGE": "Message",
 		"MESSAGE_ERROR": "Please enter a message",
 		"SEND": "Send"
+	}, 
+	"LOGIN": {
+		"TITLE": "Log In",
+		"FORGOT_PASSWORD": "Forgot your password?", 
+		"CLICK": "Recover Password"
+	}, 
+	"REGISTER": {
+		"TITLE": "Register"
 	}
 }
