--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -148,7 +148,8 @@
 		"INITIATIVES": "Initiatives",
 		"TEAM": "Team",
 		"NEWS": "News",
-		"SPONSORS": "Sponsors"
+		"SPONSORS": "Sponsors",
+		"WRITENEWS" : "Create News"
 	},
 	"PYTHONCOURSES": {
 		"CLASSES": {
@@ -205,7 +206,7 @@
 		"BODY": "Body",
 		"CHECKBUTTON": "show on the news page",
 		"UPLOAD": "UPLOAD NEWS"
-	}, 
+	},
 	"LOGIN": {
 		"TITLE": "Log In",
 		"FORGOT_PASSWORD": "Forgot your password?",
