--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -158,7 +158,8 @@
 		"INITIATIVES": "Iniciativas",
 		"TEAM": "Equipo",
 		"NEWS": "Noticias",
-		"SPONSORS": "Auspiciantes"
+		"SPONSORS": "Auspiciantes",
+		"WRITENEWS" : "Crear Noticia"
 	},
 	"PYTHONCOURSES": {
 		"CLASSES": {
@@ -217,7 +218,7 @@
 		"BODY": "Cuerpo",
 		"CHECKBUTTON": "Mostrar en la página de noticias",
 		"UPLOAD": "SUBIR NOTICIA"
-	}, 
+	},
 	"LOGIN": {
 		"TITLE": "Iniciar Sesión",
 		"FORGOT_PASSWORD": "¿Olvidaste tu contraseña?",
