<internal>: fixed authguard verification and changed error401 css

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -232,5 +232,9 @@
 	},
 	"WELCOME": {
 		"TEXT": " Bienvenido/a, "
+	},
+	"ERROR": {
+		"ROLE": "No tienes permiso para acceder a esa página",
+		"GOBACK": "Volver a la página principal"
 	}
 }
