--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -220,5 +220,9 @@
 	},
 	"WELCOME": {
 		"TEXT": " Welcome back, "
+	},
+	"ERROR": {
+		"ROLE": "You don't have the required credentials to access this page",
+		"GOBACK": "Go back to the homepage"
 	}
 }
