deployed navbar news title

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -197,7 +197,7 @@
 		"SEND": "Send"
 	},
 	"WRITE-NEW": {
-		"TITLE": "Write New",
+		"TITLE": "Write News",
 		"TITLE2": "Title",
 		"POMPADOUR": "Pompadour",
 		"AUTHOR": "Author",
