deplyed python sponsors

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,6 +169,7 @@
 		"ENROLLBUTTON": "Enroll",
 		"QUESTIONS": {
 			"TEXT": "We opened a SubReddit to answer questions: ",
+			"TEXT_VIDEOS": "Check our live videos with more info about our classes !",
 			"TITLE": "Questions"
 		},
 		"TITLE": "Python Beginner's courses 2020 "
