deleted python q/a and added enroll button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -166,13 +166,13 @@
 			"DATE4": "October 25"
 		},
 		"DESC": "This course's public is getting bigger and bigger but one of the issues we've found is that students don't usually have a lot of available time. With this in mind, the course has been designed with a work-friendly format consisting of four classes of three hours each, where we emphasize practical examples with real applications in the real world. Finally, and considering the great heterogeneity of participants, we decided to offer personal support and question solving.",
-		"ENROLLBUTTON": "Enroll",
+		"ENROLLBUTTON": "Enroll now !",
 		"QUESTIONS": {
 			"TEXT": "We opened a SubReddit to answer questions: ",
 			"TEXT_VIDEOS": "Check our live videos with more info about our classes !",
 			"TITLE": "Questions"
 		},
-		"TITLE": "Python Beginner's courses 2020 "
+		"TITLE": "Python Beginner's courses 2021 "
 	},
 	"IEEEMEETUP": {
 		"TITLE": "IEEE - 2nd Meet Up",
