--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -176,13 +176,13 @@
 			"DATE4": "25 de Octubre"
 		},
 		"DESC": "Este público es cada vez más grande pero típicamente no tienen tiempo disponible. Con esto en mente, el curso fue diseñado con un formato amigable de cuatro clases de tres horas de forma tal que pueda realizarse como actividad complementaria al estudio curricular o al trabajo, con un fuerte énfasis en ejemplos prácticos que se relacionen fácilmente con casos de aplicación realistas para la vida profesional. A esto se suma la asistencia personalizada para dar respuesta a la gran heterogeneidad de los participantes, considerando las diferentes carreras, profesiones y edades presentes.",
-		"ENROLLBUTTON": "Anotate",
+		"ENROLLBUTTON": "¡ Anotate ahora !",
 		"QUESTIONS": {
 			"TEXT": "Tenemos un SubReddit para contestar dudas: ",
 			"TEXT_VIDEOS": "Tenemos videos en vivo con consultas sobre las clases:",
 			"TITLE": "Consultas"
 		},
-		"TITLE": "Cursos Principiante de Python 2020"
+		"TITLE": "Cursos Principiante de Python 2021"
 	},
 	"IEEEMEETUP": {
 		"TITLE": "IEEE - 2do Meet Up",
